<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">InAppPurchaseExample</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="showItemsButton">Show Items</string>
    <string name="buyTextView">Would you like to buy anything?</string>
    <string name="buy_button">Buy</string>
    <string name="showPriceButton">Show Price</string>
    <string name="successful_purchase">You purchased item</string>
    <string name="inventoryTextView">Inventory:</string>
    <string name="consumeItemButton">Consume item</string>

    <string name="no_ad">Get rid off that ad!</string>
    <string name="premium">Premium account</string>
    <string name="admob_id">ca-app-pub-4033069081235195/8092414667</string>
    <string name="googleapikey">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAuFOBZLt9tj+0/YbyEzsu2gs53ADfbfYwqWa4GkrafltJLiJDI59KMG5dVa8z8SFLjHTxoWJupZncYTBTLiq/Yu14ahhCVv8RA2JuY2CYKurUvZYs3a+vtg1mwPbrLhodE59zm1EGXb+Q4KNvaAZM5/9FpGvWftS1zcd1XmYBEKeVhAsL/LMFbijk3QbmckILcAPAiZyZaNWrYzZq/SvmbDkd5mPOuE01zKrF/0CcL3uahTdkNYCecS33UxzxFUcaWnqkdyBv8DytGGPq2YFWV2eRw0x5iEMj8qBkwI9ZiQ4VV3LC9PssWqBnE94QPqgmf2chbuj2t3gHaS76uwm3GwIDAQAB</string>


</resources>
